Version bumps and refactorings